# multisensor_calibration

./: .gitignore  CHANGELOG.rst  README.md
multisensor_calibration/: CHANGELOG.rst  CMakeLists.txt  nodelet_multisensor_calibration.xml  package.xml  package.xml.in
multisensor_calibration/cfg/: CalibrationUncertainty.py  EnumDefinitions.py  ExtrinsicCameraLidarCalibration.cfg  ExtrinsicCameraReferenceCalibration.cfg  ExtrinsicLidarLidarCalibration.cfg  ExtrinsicLidarReferenceCalibration.cfg  ExtrinsicLidarVehicleCalibration.cfg  Icp.py  LidarDataProcessingNodelet.cfg  Pnp.py  TargetDetectionLidar.py  TargetWithCirclesAndAruco.yaml  TargetWithCirclesAndAruco_field.yaml  TargetWithCirclesAndAruco_office.yaml
multisensor_calibration/include/multisensor_calibration/calibration/: CalibrationBase.h  Extrinsic2d3dCalibrationBase.h  Extrinsic3d3dCalibrationBase.h  ExtrinsicCalibrationBase.h  ExtrinsicCameraLidarCalibrationNodelet.h  ExtrinsicCameraReferenceCalibrationNodelet.h  ExtrinsicLidarLidarCalibrationNodelet.h  ExtrinsicLidarReferenceCalibrationNodelet.h  ExtrinsicLidarVehicleCalibrationNodelet.h
multisensor_calibration/include/multisensor_calibration/calibration_target/: CalibrationTarget.hpp
multisensor_calibration/include/multisensor_calibration/common/: common.h  utils.hpp
multisensor_calibration/include/multisensor_calibration/common/lib3D/: core.hpp
multisensor_calibration/include/multisensor_calibration/common/lib3D/core/: camera.hpp  colmapfilestorage.hpp  common.h  exceptions.hpp  extrinsics.hpp  filestorage.hpp  frame.hpp  geometry.hpp  (+4 more)
multisensor_calibration/include/multisensor_calibration/config/: CalibrationTarget.hpp  Cutout.h  LidarTargetDetectionParameters.hpp  Workspace.h
multisensor_calibration/include/multisensor_calibration/data_processing/: CalibrationTargetSacModel.h  CameraDataProcessingNodelet.h  CameraDataProcessor.h  DataProcessor2d.h  DataProcessor3d.h  LidarDataProcessingNodelet.h  LidarDataProcessor.h  ReferenceDataProcessor3d.h  SensorDataProcessorBase.h
multisensor_calibration/include/multisensor_calibration/deprecated/: EmptyCircle3DSacModel.hpp
multisensor_calibration/include/multisensor_calibration/guidance/: GuidanceBase.h  GuidedCameraLidarTargetPlacementNode.h  GuidedCameraLidarTargetPlacementNodelet.h  GuidedLidarLidarTargetPlacementNodelet.h
multisensor_calibration/include/multisensor_calibration/sensor_data_processing/: LidarDataProcessor.h
multisensor_calibration/include/multisensor_calibration/ui/: AboutDialog.h  CalibrationConfigDialog.h  CalibrationControlWindow.h  CalibrationGuiBase.h  CameraLidarCalibrationGui.h  CameraReferenceCalibrationGui.h  ExtrinsicCameraLidarConfigWidget.h  ExtrinsicCameraReferenceConfigWidget.h  ExtrinsicLidarLidarConfigWidget.h  ExtrinsicLidarReferenceConfigWidget.h  GuiBase.h  ImageViewDialog.h  InstallWorkspaceDialog.h  LidarLidarCalibrationGui.h  LidarReferenceCalibrationGui.h  MultiSensorCalibrationGui.h  ObservationsViewDialog.h  Rviz3dViewDialog.h
multisensor_calibration/include/multisensor_calibration/visualizers/: PointCloud2ImageNode.h  PointCloud2ImageNodelet.h  PointCloud2PointCloudDistanceNodelet.h
multisensor_calibration/launch/: multi_sensor_calib_example.launch
multisensor_calibration/launch/example/: example_ousterLeft_reference_calibration.launch  example_ousterRight_ousterLeft_calibration.launch  example_stereoLeft_ousterLeft_calibration.launch
multisensor_calibration/msg/: CalibrationResultMsg.msg  MarkerObservations.msg  StampedFloat32MultiArray.msg  TargetPoseMsg.msg
multisensor_calibration/resources/: about.qrc  icons.qrc
multisensor_calibration/resources/robot_workspaces/example/stereo_camera_left_ouster_left_extrinsic_calibration/: settings.ini
multisensor_calibration/src/calibration/: CalibrationBase.cpp  Extrinsic2d3dCalibrationBase.cpp  Extrinsic3d3dCalibrationBase.cpp  ExtrinsicCalibrationBase.cpp  ExtrinsicCameraLidarCalibration.cpp  ExtrinsicCameraLidarCalibrationNodelet.cpp  ExtrinsicCameraReferenceCalibrationNodelet.cpp  ExtrinsicLidarLidarCalibrationNodelet.cpp  ExtrinsicLidarReferenceCalibrationNodelet.cpp  ExtrinsicLidarVehicleCalibrationNodelet.cpp
multisensor_calibration/src/config/: CircularCutout.cpp  Cutout.cpp  Workspace.cpp
multisensor_calibration/src/data_processing/: CalibrationTargetSacModel.cpp  CameraDataProcessingNodelet.cpp  CameraDataProcessor.cpp  DataProcessor2d.cpp  DataProcessor3d.cpp  LidarDataProcessingNodelet.cpp  LidarDataProcessor.cpp  LocalPlaneSacModel.cpp  ReferenceDataProcessor3d.cpp  SensorDataProcessorBase.cpp
multisensor_calibration/src/guidance/: GuidanceBase.cpp  GuidedCameraLidarTargetPlacementNode.cpp  GuidedCameraLidarTargetPlacementNodelet.cpp  GuidedLidarLidarTargetPlacementNode.cpp  GuidedLidarLidarTargetPlacementNodelet.cpp
multisensor_calibration/src/nodes/: CalibrationNode.cpp  InitializeRobotWsNode.cpp  PublishPointCloudNode.cpp  PublishPointcloudNode.cpp
multisensor_calibration/src/sensor_data_processing/: CameraDataProcessor.cpp  CameraTargetDetection.cpp  DataProcessor2d.cpp  LidarDataProcessor.cpp
multisensor_calibration/src/ui/: AboutDialog.cpp  CalibrationConfigDialog.cpp  CalibrationControlWindow.cpp  CalibrationGuiBase.cpp  CameraLidarCalibrationGui.cpp  CameraReferenceCalibrationGui.cpp  ExtrinsicCameraLidarConfigWidget.cpp  ExtrinsicCameraReferenceConfigWidget.cpp  ExtrinsicLidarLidarConfigWidget.cpp  ExtrinsicLidarLidarConfigWidget.ui  ExtrinsicLidarReferenceConfigWidget.cpp  GuiBase.cpp  ImageViewDialog.cpp  InstallWorkspaceDialog.cpp  LidarLidarCalibrationGui.cpp  LidarReferenceCalibrationGui.cpp  MultiSensorCalibrationGui.cpp  ObservationsViewDialog.cpp  Rviz3dViewDialog.cpp
multisensor_calibration/src/visualizers/: PointCloud2ImageNode.cpp  PointCloud2ImageNodelet.cpp  PointCloud2PointCloudDistance.cpp  PointCloud2PointCloudDistanceNodelet.cpp
multisensor_calibration/srv/: AddMarkerObservations.srv  AddRegionMarker.srv  CalibrationMetaData.srv  CameraIntrinsics.srv  DataProcessorState.srv  FinalizeCalibration.srv  ImportMarkerObservations.srv  SensorExtrinsics.srv
(+12 files in other folders)
